--- a/static/css/blog-home.css
+++ b/static/css/blog-home.css
@@ -3,11 +3,30 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
-
 footer {
     margin: 50px 0;
+}
+
+#mCarousel{
+    height: 400px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+#mCarousel img {
+    width: 100%;
+}
+
+.card-deck{
+    flex-direction: column;
+}
+
+@media(max-width: 450px) {
+    #myCarousel {
+        height: 200px;
+        overflow: hidden;
+    }
 }
