--- a/views/fragment/navigation.html
+++ b/views/fragment/navigation.html
@@ -1,68 +1,43 @@
 {{define "navigation.html"}}
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Wblog</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/index">博文</a>
-                    </li>
-                    <li>
-                        <a href="/page/6">关于</a>
-                    </li>
-                    <li>
-                        <a href="/rss" target="_blank">RSS</a>
-                    </li>
-                    <li>
-                        <a href="/subscribe">订阅</a>
-                    </li>
-                </ul>
-
-                <ul class="pull-right nav navbar-nav">
-                    <ul class="nav navbar-nav">
-                        {{if .user}}
-                            <li><a href="/admin">控制台</a></li>
-                            <li>
-                                <a href="/logout">
-                                    <span>退出登录</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="/admin/profile">
-                                    {{if gt (len .user.AvatarUrl) 0}}
-                                        <img src="{{.user.AvatarUrl}}" style="width: 30px ;" alt="User Image"
-                                             class="img-circle">
-                                    {{else}}
-                                        <img src="/static/libs/AdminLTE/img/av.png"
-                                             style="width: 30px;margin: -5px 5px -5px -5px;" class="img-circle"
-                                             alt="User Image">
-                                    {{end}}
-                                </a>
-                            </li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">Wblog</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/index">博文<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/page/6">关于</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="/rss">RSS</a></li>
+                <li class="nav-item"><a class="nav-link" href="subscribe">订阅</a></li>
+            </ul>
+            <ul class="nav navbar-nav pull-right">
+                {{if .user}}
+                <li class="nav-item"><a href="/admin" class="nav-link">控制台</a></li>
+                <li class="nav-item">
+                    <a href="/logout" class="nav-link">
+                        退出登录
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/admin/profile" class="navbar-brand">
+                        {{if gt (len .user.AvatarUrl) 0}}
+                        <img src="{{.user.AvatarUrl}}" style="width: 30px;" alt="User Image"
+                            class="rounded-circle nav-img">
                         {{else}}
-                            <li><a href="/signin">登录</a></li>
+                        <img src="/static/libs/AdminLTE/img/av.png" style="width: 25px;" class="rounded-circle"
+                            alt="User Image">
                         {{end}}
-                    </ul>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-
-            <div class="pull-right">
-
-            </div>
+                    </a>
+                </li>
+                {{else}}
+                <li><a href="/signin">登录</a></li>
+                {{end}}
+            </ul>
 
         </div>
-        <!-- /.container -->
-    </nav>
+    </div>
+</nav>
 {{end}}
