--- a/views/index/index.html
+++ b/views/index/index.html
@@ -10,33 +10,11 @@
     {{template "meta.html"}}
 
     <title>Blog</title>
+    <link rel="stylesheet" href="/static/libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://ico.z01.com/zico.min.css">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="/static/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="/static/css/blog-home.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
+    <link rel="stylesheet" href="/static/css/blog-home.css">
     <link rel="stylesheet" href="/static/css/base.css">
-    <style>
-        #myCarousel {
-            height: 500px;
-            overflow: hidden;
-        }
-        @media(max-width: 450px) {
-            #myCarousel {
-                height: 200px;
-                overflow: hidden;
-            }
-        }
-    </style>
 
 </head>
 
@@ -44,50 +22,50 @@
 
     {{template "navigation.html" .}}
 
-    <!-- Page Content -->
     <div class="container">
+
         <div class="row">
             <div class="col-md-12">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="4000">
-                    <!-- 轮播（Carousel）指标 -->
+                <div id="mCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
-                        {{range $k,$v := .images}}
+                        {{ range $k,$v := .images}}
                         {{if eq $k 0}}
-                        <li data-target="#myCarousel" data-slide-to={{$k}} class="active"></li>
+                        <li data-target="#mCarousel" data-slide-to="0" class="active"></li>
                         {{else}}
-                        <li data-target="#myCarousel" data-slide-to={{$k}}></li>
+                        <li data-target="#mCarousel" data-slide-to={{$k}}></li>
                         {{end}}
                         {{end}}
                     </ol>
-                    <!-- 轮播（Carousel）项目 -->
-                    <div class="carousel-inner">
-                        {{range $k,$v := .images}}
+                    <div class="carousel-inner" role="listbox">
+                        {{ range $k,$v := .images}}
                         {{if eq $k 0}}
-                        <div class="item active">
+                        <div class="carousel-item active">
                             {{else}}
-                            <div class="item">
+                            <div class="carousel-item">
                                 {{end}}
-                                <img src=/{{$v.Path}}>
+                                <img src={{$v.Path}}>
+                                <div class="carousel-caption d-none d-md-block">
+                                    <!-- <h3>Title</h3> -->
+                                    <p>{{$v.Description}}</p>
+                                </div>
                             </div>
                             {{end}}
-                        </div>
-                    </div>
 
+                        </div>
+                        <a class="carousel-control-prev" href="#mCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#mCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="clearfix" style="margin-bottom: 20px;"></div>
-
             <div class="row">
-                <!-- Blog Entries Column -->
                 <div class="col-md-8">
-
-                    <!--<h1 class="page-header">
-                    Page Heading
-                    <small>Secondary Text</small>
-                </h1>-->
-
                     <section class="article">
-                        <!-- First Blog Post -->
                         {{range $postkey,$postvalue:=.posts}}
                         <div class="articleInfo">
                             <span><a class="articleTitle" href="/post/{{$postvalue.ID}}">
@@ -110,7 +88,6 @@
                             {{$postvalue.Body}}
                             {{end}}
                         </div>
-
                         <!-- article tags -->
                         <div style="margin-top: 10px">
                             <tr>
@@ -121,186 +98,133 @@
                                 </a>
                                 {{end}}
                             </tr>
-                        </div><!-- article tags -->
-
+                        </div>
                         <hr>
-
                         {{end}}
                     </section>
 
-                    <!-- Pager
-                <ul class="pager">
-                    <li class="previous">
-                        <a href="#">&larr; Older</a>
-                    </li>
-                    <li class="next">
-                        <a href="#">Newer &rarr;</a>
-                    </li>
-                </ul>-->
-
                     {{if le .pageIndex .totalPage}}
-                    <ul class="pager">
+                    <ul class="pagination justify-content-center">
                         {{if le .pageIndex 1}}
-                        <li class="disabled"><a href="#">上一页</a></li>
+                        <li class="disabled page-item"><a class="page-link" href="#">上一页</a></li>
                         {{else}}
-                        <li class=""><a href="{{.path}}?page={{minus .pageIndex 1}}">上一页</a></li>
+                        <li class="page-item"><a class="page-link" href="{{.path}}?page={{minus .pageIndex 1}}">上一页</a>
+                        </li>
                         {{end}}
-                        <li>{{ .pageIndex }}/ {{ .totalPage }}</li>
+                        <li class="page-item">{{ .pageIndex }}/ {{ .totalPage }}</li>
                         {{if lt .pageIndex .totalPage }}
-                        <li class=""><a href="{{.path}}?page={{add .pageIndex 1}}">下一页</a></li>
+                        <li class="page-item"><a class="page-link" href="{{.path}}?page={{add .pageIndex 1}}">下一页</a>
+                        </li>
                         {{ else}}
-                        <li class="disabled"><a href="#">下一页</a></li>
+                        <li class="page-item disabled"><a class="page-link" href="#">下一页</a></li>
                         {{end}}
                     </ul>
                     {{end}}
 
                 </div>
 
-                <!-- Blog Sidebar Widgets Column -->
                 <div class="col-md-4">
-                    {{/*
-            <!-- Blog Search Well -->
-            <div class="well">
-                <h5>文章搜索</h5>
-                <div class="input-group">
-                    <input type="text" class="form-control">
-                    <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                        </span>
+                    <div class="card-deck">
+                        <div class="card bg-light mb-3">
+                            <div class="card-body">
+                                <h5><i class="zi zi_tags"></i></span> 文章标签</h5>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                {{range $tagkey,$tagvalue:=.tags}}
+                                {{if isEven $tagkey}}
+                                <li class="list-group-item"><a
+                                        href="/tag/{{$tagvalue.ID}}">{{$tagvalue.Name}}({{$tagvalue.Total}}
+                                        )</a>
+                                </li>
+                                {{end}}
+                                {{end}}
+                            </ul>
+                            <ul class="list-group list-group-flush">
+                                {{range $tagkey,$tagvalue:=.tags}}
+                                {{if isOdd $tagkey}}
+                                <li class="list-group-item"><a
+                                        href="/tag/{{$tagvalue.ID}}">{{$tagvalue.Name}}({{$tagvalue.Total}}
+                                        )</a>
+                                </li>
+                                {{end}}
+                                {{end}}
+                            </ul>
+                        </div>
+                        <div class="card bg-light mb-3">
+
+                            <div class="card-body">
+                                <h5><i class="zi zi_book"></i></span> 文章归档</h5>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                {{range $archivekey,$archivevalue:=.archives}}
+                                {{if isEven $archivekey}}
+                                <li class="list-group-item">
+                                    <a href="/archives/{{$archivevalue.Year}}/{{$archivevalue.Month}}">{{dateFormat $archivevalue.ArchiveDate "2006年01月"}}
+                                        ({{$archivevalue.Total}})</a>
+                                </li>
+                                {{end}}
+                                {{end}}
+                            </ul>
+                            <ul class="list-group list-group-flush">
+                                {{range $archivekey,$archivevalue:=.archives}}
+                                {{if isOdd $archivekey}}
+                                <li class="list-group-item">
+                                    <a href="/archives/{{$archivevalue.Year}}/{{$archivevalue.Month}}">{{dateFormat $archivevalue.ArchiveDate "2006年01月"}}
+                                        ({{$archivevalue.Total}})</a>
+                                </li>
+                                {{end}}
+                                {{end}}
+                            </ul>
+                        </div>
+                        <div class="card bg-light mb-3">
+
+                            <div class="card-body">
+                                <h5><i class="zi zi_bookopen"></i></span> 阅读最多</h5>
+
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                {{range $key,$post:=.maxReadPosts}}
+                                <li class="list-group-item"><a
+                                        href="/post/{{$post.ID}}">{{$post.Title}}({{$post.View}})</a></li>
+                                {{end}}
+                            </ul>
+                        </div>
+                        <div class="card bg-light mb-3">
+
+                            <div class="card-body">
+                                <h5><i class="zi zi_comment"></i></span> 评论最多</h5>
+
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                {{range $key,$post:=.maxCommentPosts}}
+                                <li class="list-group-item"><a
+                                        href="/post/{{$post.ID}}">{{$post.Title}}({{$post.CommentTotal}})</a>
+                                </li>
+                                {{end}}
+                            </ul>
+                        </div>
+                        <div class="card bg-light mb-3">
+
+                            <div class="card-body">
+                                <h5><i class="zi zi_link"></i></span> 友情链接</h5>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                {{range .links}}
+                                <li class="list-group-item"><a href="/link/{{.ID}}" target="_blank"
+                                        title="{{.Url}}">{{.Name}}</a>
+                                </li>
+                                {{end}}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <!-- /.input-group -->
-            </div>
-*/}}
-                    <!-- Blog Categories Well -->
-                    <div class="well">
-                        <h5><span class="glyphicon glyphicon-tag"></span> 文章标签</h5>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled">
-                                    {{range $tagkey,$tagvalue:=.tags}}
-                                    {{if isEven $tagkey}}
-                                    <li><a href="/tag/{{$tagvalue.ID}}">{{$tagvalue.Name}}({{$tagvalue.Total}}
-                                            )</a>
-                                    </li>
-                                    {{end}}
-                                    {{end}}
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-6 -->
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled">
-                                    {{range $tagkey,$tagvalue:=.tags}}
-                                    {{if isOdd $tagkey}}
-                                    <li><a href="/tag/{{$tagvalue.ID}}">{{$tagvalue.Name}}({{$tagvalue.Total}}
-                                            )</a>
-                                    </li>
-                                    {{end}}
-                                    {{end}}
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-6 -->
-                        </div>
-                        <!-- /.row -->
-                    </div>
-
-                    <!-- Side Widget Well -->
-                    <div class="well">
-                        <h5><span class="glyphicon glyphicon-folder-open"></span> 文章归档</h5>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled">
-                                    {{range $archivekey,$archivevalue:=.archives}}
-                                    {{if isEven $archivekey}}
-                                    <li>
-                                        <a href="/archives/{{$archivevalue.Year}}/{{$archivevalue.Month}}">{{dateFormat $archivevalue.ArchiveDate "2006年01月"}}
-                                            ({{$archivevalue.Total}})</a>
-                                    </li>
-                                    {{end}}
-                                    {{end}}
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-6 -->
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled">
-                                    {{range $archivekey,$archivevalue:=.archives}}
-                                    {{if isOdd $archivekey}}
-                                    <li>
-                                        <a href="/archives/{{$archivevalue.Year}}/{{$archivevalue.Month}}">{{dateFormat $archivevalue.ArchiveDate "2006年01月"}}
-                                            ({{$archivevalue.Total}})</a>
-                                    </li>
-                                    {{end}}
-                                    {{end}}
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-6 -->
-                        </div>
-                        <!-- /.row -->
-                    </div>
-
-                    <div class="well">
-                        <h5><span class="glyphicon glyphicon-fire"></span> 阅读最多</h5>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <ul class="list-unstyled">
-                                    {{range $key,$post:=.maxReadPosts}}
-                                    <li><a href="/post/{{$post.ID}}">{{$post.Title}}({{$post.View}})</a></li>
-                                    {{end}}
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-12 -->
-                        </div>
-                        <!-- /.row -->
-                    </div>
-
-                    <div class="well">
-                        <h5><span class="glyphicon glyphicon-comment"></span> 评论最多</h5>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <ul class="list-unstyled">
-                                    {{range $key,$post:=.maxCommentPosts}}
-                                    <li><a href="/post/{{$post.ID}}">{{$post.Title}}({{$post.CommentTotal}})</a>
-                                    </li>
-                                    {{end}}
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-12 -->
-                        </div>
-                        <!-- /.row -->
-                    </div>
-
-                    <div class="well">
-                        <h5><span class="glyphicon glyphicon-link"></span> 友情链接</h5>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <ul class="list-unstyled">
-                                    {{range .links}}
-                                    <li><a href="/link/{{.ID}}" target="_blank" title="{{.Url}}">{{.Name}}</a>
-                                    </li>
-                                    {{end}}
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-6 -->
-                        </div>
-                        <!-- /.row -->
-                    </div>
-
-                </div>
-
             </div>
 
             {{template "footer.html"}}
 
         </div>
-        <!-- /.container -->
-
-        <!-- jQuery -->
         <script src="/static/libs/jquery/jquery.min.js"></script>
-
-        <!-- Bootstrap Core JavaScript -->
         <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
