--- a/views/fragment/navigation.html
+++ b/views/fragment/navigation.html
@@ -16,10 +16,10 @@
                         <a class="nav-link" href="/game">小游戏</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/page/6">关于</a>
+                        <a class="nav-link" href="/about">关于</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="/rss">RSS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="subscribe">订阅</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/subscribe">订阅</a></li>
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                     {{if .user}}
