--- a/views/fragment/footer.html
+++ b/views/fragment/footer.html
@@ -1,5 +1,6 @@
 {{define "footer.html"}}
-    <footer class="blog-footer">
+    <footer class="blog-footer" style="padding: 2.5rem 0;color: #999;text-align:
+    center;background-color:#f9f9f9;border-top:.05rem solid #e5e5e5 ">
         <p>2020 | CC BY-NC 4.0</p>
         <p>
             <a href="#">回到顶部</a>
