--- a/views/admin/page_start.html
+++ b/views/admin/page_start.html
@@ -13,6 +13,7 @@
      <!-- Font Awesome -->
      <link rel="stylesheet" href="/static/libs/fontawesome-free/css/all.min.css">
      <link rel="stylesheet" href="/static/libs/admin-lte/dist/css/adminlte.min.css">
+     <!-- Daterange picker -->
      <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
