--- a/views/page/new.html
+++ b/views/page/new.html
@@ -120,9 +120,8 @@
 
         <!-- add a new tag -->
         <span id="tagBug">
-
-            <a id="pageSave" class="glyphicon glyphicon-saved"
-               style="float: right; padding-left: 15px;"></a>
+            <a id="pageSave" class="btn btn-dark text-light"
+               style="float: right; padding-left: 15px;">保存</a>
         </span><br/><br/>
 
         <!-- create or update a article -->
