--- a/views/post/display.html
+++ b/views/post/display.html
@@ -190,7 +190,7 @@
         <!-- /.row -->
 
         <a id="back-to-top" href="#" class="btn btn-default btn-md back-to-top" role="button"
-           data-toggle="tooltip" data-placement="left"><span class="glyphicon glyphicon-chevron-up"></span>
+           data-toggle="tooltip" data-placement="left">返回顶部<span class="glyphicon glyphicon-chevron-up"></span>
         </a>
 
     </div>
