--- a/views/admin/post.html
+++ b/views/admin/post.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Wblog - Post</title>
+        <title>Blog - Post</title>
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <link rel="stylesheet" href="/static/libs/admin-lte/plugins/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -51,9 +51,6 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="card">
-                                <div class="card-header">
-                                    <h3 class="card-title">查看文章数据</h3>
-                                </div>
                                 <!-- /.card-header -->
                                 <div class="card-body">
                                     <table id="example2" class="table table-bordered table-hover dataTable dtr-inline"
@@ -136,27 +133,23 @@
                 </div>
             </div>
 
-            <!-- jQuery -->
             <script src="/static/libs/jquery/jquery.min.js"></script>
-            <!-- Bootstrap 4 -->
             <script src="/static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-            <!-- DataTables -->
             <script src="/static/libs/admin-lte/plugins/datatables/jquery.dataTables.min.js"></script>
             <script src="/static/libs/admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
             <script src="/static/libs/admin-lte/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
             <script src="/static/libs/admin-lte/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
             <script src="/static/libs/admin-lte/dist/js/adminlte.min.js"></script>
             <script src="/static/libs/admin-lte/dist/js/demo.js"></script>
-            <!-- page script -->
             <script>
                 $(function () {
                     $('#example2').DataTable({
                         'paging': true,
-                        'lengthChange': false,
-                        'searching': false,
+                        'lengthChange': true,
+                        'searching': true,
                         'ordering': true,
                         'info': true,
-                        'autoWidth': false
+                        'autoWidth': true
                     });
                 });
 
