--- a/views/auth/signup.html
+++ b/views/auth/signup.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>用户注册</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link href="https://cdn.bootcss.com/meyer-reset/2.0/reset.min.css" rel="stylesheet">
     <style>
         body {
             background: rgb(37, 37, 37)
