--- a/views/admin/subscriber.html
+++ b/views/admin/subscriber.html
@@ -34,7 +34,7 @@
                     <div class="row mb-2">
                         <div class="col-sm-6">
                             <h1 class="m-0 text-dark">
-                                博文管理
+                                订阅管理
                                 <a class="btn btn-primary" href="javascript:void(0);" data-href="/admin/new_batchmail"
                                     data-toggle="modal" data-target="#confirm-delete">群发</a>
                             </h1>
@@ -122,13 +122,13 @@
                 <div class="modal-body">
                     <form id="form_data" role="form" class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">邮件主题</label>
+                            <label class="control-label">邮件主题</label>
                             <div class="col-sm-10">
                                 <input name="subject" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">邮件内容</label>
+                            <label class="control-label">邮件内容</label>
                             <div class="col-sm-10">
                                 <textarea name="content" class="form-control" rows="3"></textarea>
                             </div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                    <a class="btn btn-primary btn-ok">发送</a>
+                    <a class="btn btn-primary btn-ok text-light">发送</a>
                 </div>
             </div>
         </div>
@@ -159,11 +159,11 @@
         $(function () {
             $('#example2').DataTable({
                 'paging': true,
-                'lengthChange': false,
-                'searching': false,
+                'lengthChange': true,
+                'searching': true,
                 'ordering': true,
                 'info': true,
-                'autoWidth': false
+                'autoWidth': true
             });
         });
 
