--- a/views/game/index.html
+++ b/views/game/index.html
@@ -14,6 +14,8 @@
     <script src="/static/game/support.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/game/animation.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/game/main.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="shortcut icon" href="/static/favicon.ico">
+
 </head>
 
 <body>
