--- a/views/other/subscribe.html
+++ b/views/other/subscribe.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <title>Wblog - 订阅</title>
 
     <!-- Bootstrap Core CSS -->
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-{{template "navigation.html"}}
+{{template "navigation.html" .}}
 
 <div class="container">
     {{if .message}}
@@ -42,6 +42,8 @@
         <a href="#" class="alert-link">{{.message}}</a>
     </div>
     {{end}}
+
+    <p class="text-info">请输入您的邮箱，点击订阅按钮您会收到一封邮件，请按照邮件中的提示进行激活</p>
 
     <form class="form-inline" method="post">
         <div class="form-group">
