--- a/views/admin/banner.html
+++ b/views/admin/banner.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet"
               href="/static/libs/admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
         <link rel="stylesheet" href="/static/libs/admin-lte/dist/css/adminlte.min.css">
+        <link rel="shortcut icon" href="/static/favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     </head>
 
