--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -12,15 +12,15 @@
                         <h1 class="m-0 text-dark">
                             首页
                         </h1>
-                    </div><!-- /.col -->
+                    </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">首页</a></li>
                             <li class="breadcrumb-item active">控制台</li>
                         </ol>
-                    </div><!-- /.col -->
-                </div><!-- /.row -->
-            </div><!-- /.container-fluid -->
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Main content -->
