--- a/views/admin/link.html
+++ b/views/admin/link.html
@@ -11,6 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/static/libs/admin-lte/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- DataTables -->
     <link rel="stylesheet" href="/static/libs/admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
