--- a/views/admin/navbar.html
+++ b/views/admin/navbar.html
@@ -1,79 +1,39 @@
 {{define "admin/navbar.html"}}
-<!-- Navbar -->
-<nav class="main-header navbar navbar-expand navbar-white navbar-light">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-        </li>
-        <li class="nav-item">
-            <nav class="nav justify-content-center">
-              <a class="nav-link active" href="/index">返回首页</a>
-            </nav>
-        </li>
-    </ul>
-    <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
-        <!-- Messages Dropdown Menu -->
-        <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown" href="#">
-                <i class="far fa-comments"></i>
-                {{if gt (len .comments) 0}}
-                <span class="label label-warning">{{len .comments}}</span>
-                {{end}}
-            </a>
-            <ul class="dropdown-menu">
-                <li class="header">你有{{len .comments}}个评论</li>
-                <li>
-                    <ul class="menu">
-                        {{range .comments}}
-                        <li>
-                            <a href="javascript:void(0);" data-href="/admin/comment/{{.ID}}"
-                                data-redirect="/post/{{.PostID}}" class="readcomment">
-                                <i class="fa fa-comment text-aqua"></i> {{.Content}}
-                            </a>
-                        </li>
-                        {{end}}
-                    </ul>
-                </li>
-                <li class="footer"><a href="javascript:void(0);" class="readall">查看全部</a></li>
-            </ul>
-        </li>
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+        <ul class="navbar-nav">
+            <li class="nav-item d-none d-sm-inline-block">
+                <a class="nav-link active" href="/index">返回首页</a>
+            </li>
+        </ul>
 
-        <li class="dropdown user user-menu">
-            <a href="#" data-toggle="dropdown">
-                {{if gt (len .user.AvatarUrl) 0}}
-                <img src="{{.user.AvatarUrl}}" class="user-image" alt="User Image">
-                {{else}}
-                <img src="/static/libs/admin-lte/dist/img/avatar.png" class="user-image" alt="User Image">
-                {{end}}
-                <span class="hidden-xs">{{.user.Email}}</span>
-            </a>
-            <ul class="dropdown-menu">
-                <!-- User image -->
-                <li class="user-header">
-                    {{if gt (len .user.AvatarUrl) 0}}
-                    <img src="{{.user.AvatarUrl}}" class="img-circle" alt="User Image">
-                    {{else}}
-                    <img src="/static/libs/admin-lte/dist/img/avatar.png" class="img-circle" alt="User Image">
-                    {{end}}
-
-                    <p>
-                        {{.user.Email}}
-                        <small>Member since {{dateFormat .user.CreatedAt "Jan.2006"}}</small>
-                    </p>
+        <!-- Right navbar links -->
+        <ul class="navbar-nav ml-auto">
+            <!-- Messages Dropdown Menu -->
+            <div class="nav-item dropdown">
+                <a class="nav-link" data-toggle="dropdown" href="#">
+                    <i class="far fa-comments"></i>
+                    <span class="badge badge-danger navbar-badge">{{len .comments}}</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                    <div class="header">你有{{len .comments}}个评论</div>
+                    <li>
+                        <ul class="menu">
+                            {{range .comments}}
+                                <li>
+                                    <a href="javascript:void(0);" data-href="/admin/comment/{{.ID}}"
+                                       data-redirect="/post/{{.PostID}}" class="readcomment">
+                                        <i class="fa fa-comment text-aqua"></i> {{.Content}}
+                                    </a>
+                                </li>
+                            {{end}}
+                        </ul>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <a href="javascript:void(0);" class="dropdown-item dropdown-footer readall">查看全部</a>
+                </div>
                 </li>
-                <li class="user-footer">
-                    <div class="pull-left">
-                        <a href="/admin/profile" class="btn btn-default btn-flat">Profile</a>
-                    </div>
-                    <div class="pull-right">
-                        <a href="/logout" class="btn btn-default btn-flat">Logout</a>
-                    </div>
-                </li>
-            </ul>
-        </li>
-    </ul>
-</nav>
+            </div>
 
+        </ul>
+    </nav>
 {{end}}
