--- a/views/admin/page_start.html
+++ b/views/admin/page_start.html
@@ -6,14 +6,11 @@
      <meta charset="utf-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <title>Page - Dashboard</title>
-     <!-- Tell the browser to be responsive to screen width -->
      <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-     <!-- Bootstrap 3.3.7 -->
      <link rel="stylesheet" href="/static/libs/bootstrap/css/bootstrap.min.css">
-     <!-- Font Awesome -->
      <link rel="stylesheet" href="/static/libs/fontawesome-free/css/all.min.css">
      <link rel="stylesheet" href="/static/libs/admin-lte/dist/css/adminlte.min.css">
-     <!-- Daterange picker -->
+     <link rel="shortcut icon" href="/static/favicon.ico">
      <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
