--- a/views/admin/post.html
+++ b/views/admin/post.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="/static/libs/admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
         <link rel="stylesheet"
               href="/static/libs/admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+        <link rel="shortcut icon" href="/static/favicon.ico">
         <link rel="stylesheet" href="/static/libs/admin-lte/dist/css/adminlte.min.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     </head>
