--- a/views/admin/sidebar.html
+++ b/views/admin/sidebar.html
@@ -5,10 +5,10 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                {{if gt (len .user.AvatarUrl) 0}}
-                <img src="{{.user.AvatarUrl}}" class="img-circle" alt="User Image">
+                {{if gt (len .user.AvatarPath) 0}}
+                <img src="/{{.user.AvatarPath}}" class="rounded-circle" alt="User Image">
                 {{else}}
-                <img src="/static/libs/admin-lte/dist/img/avatar.png" class="img-circle" alt="User Image">
+                <img src="/static/libs/admin-lte/dist/img/avatar.png" class="rounded-circle" alt="User Image">
                 {{end}}
             </div>
             <div class="info">
