--- a/views/auth/signin.html
+++ b/views/auth/signin.html
@@ -7,6 +7,7 @@
         <title>用户登录</title>
         <link href="https://cdn.bootcss.com/meyer-reset/2.0/reset.min.css" rel="stylesheet">
         <link rel="stylesheet" href="/static/libs/bootstrap/css/bootstrap.min.css">
+        <link rel="shortcut icon" href="/static/favicon.ico">
         <style>
             body {
                 background: rgb(37, 37, 37)
