--- a/views/auth/signup.html
+++ b/views/auth/signup.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>用户注册</title>
     <link href="https://cdn.bootcss.com/meyer-reset/2.0/reset.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <style>
         body {
             background: rgb(37, 37, 37)
