--- a/views/errors/error.html
+++ b/views/errors/error.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <meta name="author" content="">
 
     <title>Page - {{.message}}</title>
