--- a/views/auth/signup.html
+++ b/views/auth/signup.html
@@ -4,6 +4,8 @@
 
     <head>
         <meta charset="UTF-8">
+        <link rel="shortcut icon" href="/static/favicon.ico">
+
         <link rel="stylesheet" href="/static/libs/admin-lte/plugins/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" href="/static/libs/iCheck/all.css">
